--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-REACT_APP_SERVER_SEARCH_BY_QUERY_ENDPOINT = "https://api.mercadolibre.com/sites/MLA/search"
-REACT_APP_SERVER_GET_ITEM_ENDPOINT = "https://api.mercadolibre.com/items"
+SERVER_SEARCH_BY_QUERY_ENDPOINT = "https://api.mercadolibre.com/sites/MLA/search"
+SERVER_GET_ITEM_ENDPOINT = "https://api.mercadolibre.com/items"
+SERVER_PORT = "3010"
