--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node-fetch": "^2.6.6",
+    "jsdoc": "^4.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
