--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/index.js",
+    "doc": "typedoc --entryPointStrategy expand ./src --out docs",
     "tsc": "tsc"
   },
   "author": "",
@@ -16,6 +17,7 @@
     "@types/node-fetch": "^2.6.6",
     "jsdoc": "^4.0.2",
     "ts-node-dev": "^2.0.0",
+    "typedoc": "^0.25.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
@@ -23,3 +25,4 @@
     "node-fetch": "^2.7.0"
   }
 }
+
