feature: Add categories and pictures

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 SERVER_SEARCH_BY_QUERY_ENDPOINT = "https://api.mercadolibre.com/sites/MLA/search"
+SERVER_SEARCH_BY_CATEGORY = "https://api.mercadolibre.com/categories/"
 SERVER_GET_ITEM_ENDPOINT = "https://api.mercadolibre.com/items"
 SERVER_PORT = "3010"
