--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/numeral": "^2.0.3",
+    "@types/react-helmet": "^6.1.7",
     "numeral": "^2.0.6",
     "sass": "^1.68.0"
   }
